shift fixed

--- a/side-menu/side-menu_styles.css
+++ b/side-menu/side-menu_styles.css
@@ -71,7 +71,6 @@ body {
 }
 
 .container--side-menu {
-    /* height: 876px; */
     margin-top: 34.27px;
     margin-bottom: 252px;
 }
@@ -82,6 +81,7 @@ body {
     /* border: 1px solid red; */
     width: 100%;
     padding: 16px 0 16px 0;
+    position: relative;
 }
 
 .navlink--side-menu {
@@ -102,7 +102,6 @@ body {
 .navlink:focus {
     color: #7e7e82;
     outline: none;
-    margin-top: -16px;
 }
 
 .navlink:focus::before {
@@ -111,9 +110,9 @@ body {
     height: 32px;
     background-color: #41F6D7;
     display: inline-block;
-    position: relative;
+    position: absolute;
     left: -24px;
-    top: 10px;
+    top: 11px;
     border-radius: 0 50% 50% 0;
 }
 
@@ -192,5 +191,4 @@ body {
 
 .language-selector__selector:focus {
     color: #7e7e82;
-    /* padding-top: 5px; */
 }
